[package]
name = "netcomm"
version = "0.1.0"
edition = "2021"
authors = ["secondary-smiles <shavkinder@lightblog.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/secondary-smiles/netcomm"
description = "Communicate with servers interactively"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
info_utils = "1.3.0"
clap = { version = "4.0.12", features = ["derive"] }
termion = "1.5.6"